--- a/ddokbi/privacy_opt.html
+++ b/ddokbi/privacy_opt.html
@@ -34,5 +34,5 @@
 </ul>
 <h3>똑비 개인정보 처리방침 전문</h3>
 <ul>
-<li>바로가기: <a href="https://raw.githubusercontent.com/Rabbitoad/policies/refs/heads/main/ddokbi/privacy_opt.md">https://raw.githubusercontent.com/Rabbitoad/policies/refs/heads/main/ddokbi/privacy_opt.md</a></li>
+<li>바로가기: <a href="https://rabbitoad.github.io/policies/ddokbi/privacy_opt.md">https://rabbitoad.github.io/policies/ddokbi/privacy_opt.md</a></li>
 </ul>
